-- Industrial machine and facility monitoring platform
-- Relational schema only: PKs, FKs, CHECKs, and indexes.
-- Role/factory assignment rules, state overlap, current_state sync,
-- and alarm-ack authorization belong in the application.

BEGIN;

CREATE SCHEMA IF NOT EXISTS app;
SET search_path TO app;


CREATE TYPE area_type AS ENUM (
  'raw_material_warehouse',
  'machining',
  'assembly',
  'packaging',
  'finished_goods_warehouse',
  'shipping',
  'utilities',
  'maintenance'
);

CREATE TYPE machine_type AS ENUM (
  'cnc',
  'lathe',
  'drill',
  'hydraulic_press',
  'conveyor',
  'robotic_arm',
  'packaging_machine',
  'labeling_machine',
  'sorter'
);

CREATE TYPE sensor_type AS ENUM (
  'temperature',
  'vibration',
  'current',
  'power',
  'rpm',
  'pressure',
  'torque',
  'cycle_time',
  'humidity',
  'air_quality',
  'co2'
);

CREATE TYPE machine_state AS ENUM (
  'running',
  'idle',
  'off',
  'fault',
  'maintenance'
);

CREATE TYPE machine_criticality AS ENUM (
  'low',
  'medium',
  'high'
);

CREATE TYPE alarm_severity AS ENUM (
  'warning',
  'critical'
);

CREATE TYPE reading_quality AS ENUM (
  'good',
  'uncertain',
  'bad'
);


CREATE TABLE factories (
  id int GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name varchar NOT NULL UNIQUE,
  timezone varchar NOT NULL DEFAULT 'UTC',
  city varchar NOT NULL,
  description text,
  is_active boolean NOT NULL DEFAULT true,
  created_at timestamptz NOT NULL DEFAULT now(),
  updated_at timestamptz NOT NULL DEFAULT now()
);

CREATE TABLE roles (
  id int GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name varchar NOT NULL UNIQUE,
  description varchar,
  created_at timestamptz NOT NULL DEFAULT now(),
  updated_at timestamptz NOT NULL DEFAULT now()
);

CREATE TABLE employees (
  id int GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  email varchar NOT NULL UNIQUE,
  password_hash varchar NOT NULL,
  full_name varchar NOT NULL,
  is_active boolean NOT NULL DEFAULT true,
  created_at timestamptz NOT NULL DEFAULT now(),
  updated_at timestamptz NOT NULL DEFAULT now()
);

CREATE TABLE employee_roles (
  id int GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  employee_id int NOT NULL REFERENCES employees (id) ON DELETE CASCADE,
  role_id int NOT NULL REFERENCES roles (id),
  factory_id int REFERENCES factories (id) ON DELETE CASCADE,
  created_at timestamptz NOT NULL DEFAULT now(),
  updated_at timestamptz NOT NULL DEFAULT now()
);

CREATE INDEX idx_employee_roles_employee_id ON employee_roles (employee_id);
CREATE INDEX idx_employee_roles_role_id ON employee_roles (role_id);
CREATE INDEX idx_employee_roles_factory_id ON employee_roles (factory_id);

-- One global (admin) assignment per employee.
CREATE UNIQUE INDEX uq_employee_roles_global
  ON employee_roles (employee_id)
  WHERE factory_id IS NULL;

-- One role per employee per factory.
CREATE UNIQUE INDEX uq_employee_roles_one_per_factory
  ON employee_roles (employee_id, factory_id)
  WHERE factory_id IS NOT NULL;

CREATE TABLE areas (
  id int GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  factory_id int NOT NULL REFERENCES factories (id),
  name varchar NOT NULL,
  area_type area_type NOT NULL,
  description text,
  is_active boolean NOT NULL DEFAULT true,
  created_at timestamptz NOT NULL DEFAULT now(),
  updated_at timestamptz NOT NULL DEFAULT now(),
  UNIQUE (factory_id, name),
  UNIQUE (factory_id, area_type)
);

CREATE TABLE machines (
  id int GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  area_id int NOT NULL REFERENCES areas (id),
  name varchar NOT NULL,
  machine_type machine_type NOT NULL,
  manufacturer varchar,
  model varchar,
  criticality machine_criticality NOT NULL DEFAULT 'medium',
  current_state machine_state NOT NULL DEFAULT 'off',
  description text,
  is_active boolean NOT NULL DEFAULT true,
  created_at timestamptz NOT NULL DEFAULT now(),
  updated_at timestamptz NOT NULL DEFAULT now(),
  UNIQUE (area_id, name),
  UNIQUE (id, area_id)
);

CREATE TABLE sensors (
  id int GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  area_id int NOT NULL REFERENCES areas (id),
  machine_id int REFERENCES machines (id),
  name varchar NOT NULL,
  sensor_type sensor_type NOT NULL,
  unit varchar NOT NULL,
  min_normal_value decimal,
  max_normal_value decimal,
  sample_interval_seconds int,
  last_seen_at timestamptz,
  description text,
  is_active boolean NOT NULL DEFAULT true,
  created_at timestamptz NOT NULL DEFAULT now(),
  updated_at timestamptz NOT NULL DEFAULT now(),
  CONSTRAINT chk_sensor_normal_range CHECK (
    min_normal_value IS NULL
    OR max_normal_value IS NULL
    OR min_normal_value <= max_normal_value
  ),
  CONSTRAINT chk_sensor_sample_interval CHECK (
    sample_interval_seconds IS NULL OR sample_interval_seconds > 0
  ),
  CONSTRAINT fk_sensors_machine_area
    FOREIGN KEY (machine_id, area_id)
    REFERENCES machines (id, area_id)
);

CREATE INDEX idx_sensors_area_id ON sensors (area_id);
CREATE INDEX idx_sensors_machine_id ON sensors (machine_id);
CREATE INDEX idx_sensors_sensor_type ON sensors (sensor_type);

-- Ambient sensors: unique name per area.
CREATE UNIQUE INDEX uq_sensors_ambient_name
  ON sensors (area_id, name)
  WHERE machine_id IS NULL;

-- Machine-mounted sensors: unique name per machine.
CREATE UNIQUE INDEX uq_sensors_machine_name
  ON sensors (machine_id, name)
  WHERE machine_id IS NOT NULL;

CREATE TABLE sensor_readings (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  sensor_id int NOT NULL REFERENCES sensors (id),
  recorded_at timestamptz NOT NULL,
  ingested_at timestamptz NOT NULL DEFAULT now(),
  value decimal NOT NULL,
  quality reading_quality NOT NULL DEFAULT 'good',
  UNIQUE (sensor_id, recorded_at)
);

CREATE TABLE machine_state_events (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  machine_id int NOT NULL REFERENCES machines (id),
  state machine_state NOT NULL,
  started_at timestamptz NOT NULL,
  ended_at timestamptz,
  CONSTRAINT chk_machine_state_period CHECK (
    ended_at IS NULL OR ended_at >= started_at
  )
);

CREATE INDEX idx_machine_state_events_machine_started
  ON machine_state_events (machine_id, started_at);

CREATE UNIQUE INDEX uq_machine_state_events_current
  ON machine_state_events (machine_id)
  WHERE ended_at IS NULL;

CREATE TABLE alarm_events (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  sensor_id int NOT NULL REFERENCES sensors (id),
  severity alarm_severity NOT NULL,
  trigger_value decimal NOT NULL,
  threshold_value decimal,
  started_at timestamptz NOT NULL,
  cleared_at timestamptz,
  acknowledged_at timestamptz,
  acknowledged_by int REFERENCES employees (id),
  message varchar,
  CONSTRAINT chk_alarm_cleared_after_start CHECK (
    cleared_at IS NULL OR cleared_at >= started_at
  ),
  CONSTRAINT chk_alarm_ack_after_start CHECK (
    acknowledged_at IS NULL OR acknowledged_at >= started_at
  ),
  CONSTRAINT chk_alarm_ack_pair CHECK (
    (acknowledged_by IS NULL) = (acknowledged_at IS NULL)
  )
);

CREATE INDEX idx_alarm_events_sensor_started ON alarm_events (sensor_id, started_at);
CREATE INDEX idx_alarm_events_acknowledged_by ON alarm_events (acknowledged_by);

CREATE UNIQUE INDEX uq_alarm_events_open
  ON alarm_events (sensor_id)
  WHERE cleared_at IS NULL;

COMMIT;
