Project industrial_monitoring {
  database_type: 'PostgreSQL'
  Note: 'PostgreSQL schema app. Source of truth: 01_schema.sql'
}

Enum area_type {
  raw_material_warehouse
  machining
  assembly
  packaging
  finished_goods_warehouse
  shipping
  utilities
  maintenance
}

Enum machine_type {
  cnc
  lathe
  drill
  hydraulic_press
  conveyor
  robotic_arm
  packaging_machine
  labeling_machine
  sorter
}

Enum sensor_type {
  temperature
  vibration
  current
  power
  rpm
  pressure
  torque
  cycle_time
  humidity
  air_quality
  co2
}

Enum machine_state {
  running
  idle
  off
  fault
  maintenance
}

Enum machine_criticality {
  low
  medium
  high
}

Enum alarm_severity {
  warning
  critical
}

Enum reading_quality {
  good
  uncertain
  bad
}


Table app.factories {
  id int [pk, increment]
  name varchar [unique, not null]
  timezone varchar [not null, default: 'UTC']
  city varchar [not null]
  description text
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}


Table app.roles {
  id int [pk, increment]
  name varchar [unique, not null]
  description varchar
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}


Table app.employees {
  id int [pk, increment]
  email varchar [unique, not null]
  password_hash varchar [not null]
  full_name varchar [not null]
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: 'Login identity only. Role and factory come from employee_roles.'
}


Table app.employee_roles {
  id int [pk, increment]
  employee_id int [not null]
  role_id int [not null]
  factory_id int
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    employee_id
    role_id
    factory_id
    (employee_id) [unique, note: 'WHERE factory_id IS NULL — one global (admin) assignment per employee']
    (employee_id, factory_id) [unique, note: 'WHERE factory_id IS NOT NULL — one role per employee per factory']
  }

  Note: '''
    Seed role names: admin, engineer, operator.
    Admin: factory_id IS NULL. Engineer/operator: factory_id IS NOT NULL.
    An employee with an admin row must not also have a factory-scoped row.
    Enforce those rules in the application.
  '''
}


Table app.areas {
  id int [pk, increment]
  factory_id int [not null]
  name varchar [not null]
  area_type area_type [not null]
  description text
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    (factory_id, name) [unique]
    (factory_id, area_type) [unique]
  }
}


Table app.machines {
  id int [pk, increment]
  area_id int [not null]
  name varchar [not null]
  machine_type machine_type [not null]
  manufacturer varchar
  model varchar
  criticality machine_criticality [not null, default: 'medium']
  current_state machine_state [not null, default: 'off']
  description text
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    (area_id, name) [unique]
    (id, area_id) [unique, note: 'Target for sensors composite FK']
  }

  Note: 'current_state is denormalized. Keep it in sync with the open machine_state_events row in the application.'
}


Table app.sensors {
  id int [pk, increment]
  area_id int [not null]
  machine_id int
  name varchar [not null]
  sensor_type sensor_type [not null]
  unit varchar [not null]
  min_normal_value decimal
  max_normal_value decimal
  sample_interval_seconds int
  last_seen_at timestamptz
  description text
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    area_id
    machine_id
    sensor_type
    (area_id, name) [unique, note: 'WHERE machine_id IS NULL — ambient sensor names unique per area']
    (machine_id, name) [unique, note: 'WHERE machine_id IS NOT NULL — mounted sensor names unique per machine']
  }

  Note: '''
    area_id is always required. machine_id is optional (ambient vs machine-mounted).
    If machine_id is set, (machine_id, area_id) references machines (id, area_id).
    CHECK min_normal_value IS NULL OR max_normal_value IS NULL OR min_normal_value <= max_normal_value.
    CHECK sample_interval_seconds IS NULL OR sample_interval_seconds > 0.
  '''
}


Table app.sensor_readings {
  id bigint [pk, increment]
  sensor_id int [not null]
  recorded_at timestamptz [not null]
  ingested_at timestamptz [not null, default: `now()`]
  value decimal [not null]
  quality reading_quality [not null, default: 'good']

  Indexes {
    (sensor_id, recorded_at) [unique]
  }

  Note: 'Append-only. recorded_at is the sample time (UTC). ingested_at is when the platform received it.'
}


Table app.machine_state_events {
  id bigint [pk, increment]
  machine_id int [not null]
  state machine_state [not null]
  started_at timestamptz [not null]
  ended_at timestamptz

  Indexes {
    (machine_id, started_at)
    (machine_id) [unique, note: 'WHERE ended_at IS NULL — at most one current state per machine']
  }

  Note: '''
    CHECK ended_at IS NULL OR ended_at >= started_at.
    Open row (ended_at IS NULL) is the current state; keep machines.current_state in sync in the application.
  '''
}


Table app.alarm_events {
  id bigint [pk, increment]
  sensor_id int [not null]
  severity alarm_severity [not null]
  trigger_value decimal [not null]
  threshold_value decimal
  started_at timestamptz [not null]
  cleared_at timestamptz
  acknowledged_at timestamptz
  acknowledged_by int
  message varchar

  Indexes {
    (sensor_id, started_at)
    acknowledged_by
    (sensor_id) [unique, note: 'WHERE cleared_at IS NULL — at most one open alarm per sensor']
  }

  Note: '''
    Open alarm: cleared_at IS NULL. Thresholds live on sensors (min/max_normal_value).
    CHECK cleared_at IS NULL OR cleared_at >= started_at.
    CHECK acknowledged_at IS NULL OR acknowledged_at >= started_at.
    CHECK (acknowledged_by IS NULL) = (acknowledged_at IS NULL).
    Who may acknowledge is enforced in the application.
  '''
}


Ref: app.factories.id < app.areas.factory_id
Ref: app.employees.id < app.employee_roles.employee_id
Ref: app.roles.id < app.employee_roles.role_id
Ref: app.factories.id < app.employee_roles.factory_id
Ref: app.areas.id < app.machines.area_id
Ref: app.areas.id < app.sensors.area_id
Ref: app.machines.id < app.sensors.machine_id
Ref: app.sensors.(machine_id, area_id) > app.machines.(id, area_id)
Ref: app.sensors.id < app.sensor_readings.sensor_id
Ref: app.machines.id < app.machine_state_events.machine_id
Ref: app.sensors.id < app.alarm_events.sensor_id
Ref: app.employees.id < app.alarm_events.acknowledged_by
